--- a/BaltaStore/BaltaStore.Domain/BaltaStore.Domain.csproj
+++ b/BaltaStore/BaltaStore.Domain/BaltaStore.Domain.csproj
@@ -9,4 +9,8 @@
     <Folder Include="InventoryContext\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidator" Version="2.0.2" />
+  </ItemGroup>
+
 </Project>
