--- a/BaltaStore/BaltaStore.Infra/BaltaStore.Infra.csproj
+++ b/BaltaStore/BaltaStore.Infra/BaltaStore.Infra.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BaltaStore.Domain\BaltaStore.Domain.csproj" />
     <ProjectReference Include="..\BaltaStore.Shared\BaltaStore.Shared.csproj" />
   </ItemGroup>
 
