--- a/BaltaStore/BaltaStore.Api/BaltaStore.Api.csproj
+++ b/BaltaStore/BaltaStore.Api/BaltaStore.Api.csproj
@@ -13,4 +13,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BaltaStore.Domain\BaltaStore.Domain.csproj" />
+    <ProjectReference Include="..\BaltaStore.Shared\BaltaStore.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
